<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".ui.fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="160dp"
        android:layout_marginStart="48dp"
        android:text="@string/login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_button"
        android:elevation="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/login"
        android:paddingStart="24dp"
        android:layout_marginTop="36dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_button"
        android:elevation="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/password"
        android:paddingStart="24dp"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/main"
        android:layout_gravity="end"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="36dp"
        android:layout_width="160dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/white"
        android:layout_height="48dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/third"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>