<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/third"
    android:orientation="vertical"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@color/main"
            app:riv_corner_radius="160dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anna_stone"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="  Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.\n
  Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis."
        android:textColor="#BDB3F7"
        android:textSize="16sp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/main"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="125 000 Tg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16sp"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <FrameLayout
                android:layout_width="128dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/second">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>